Fix up the ugliness of the attributes section of the character sheet. Insert some alignment, format stuff a bit nicer.

--- a/s/style.css
+++ b/s/style.css
@@ -45,6 +45,8 @@ div.columns { display: inline; width: 95% }
 div.column { float: left; width: auto; margin: 3em; }
 div.gold-box { clear: both; width: 100%; }
 div.centered { margin-left: auto; margin-right: auto; display: block; }
+.wri { float: left; }
+.sep {clear: both; }
 .right-align { float: right; width: auto; }
 .login { float: right; width: auto; }
 .generated-text { margin-top: 10px; padding: 50px; margin-left: 180px; margin-right: 180px; display: block; }
